flake8_to_ruff/examples/jupyterhub.ini
[flake8]
# Ignore style and complexity
# E: style errors
# W: style warnings
# C: complexity
# D: docstring warnings (unused pydocstyle extension)
# F841: local variable assigned but never used
ignore = E, C, W, D, F841
builtins = c, get_config
exclude =
    .cache,
    .github,
    docs,
    jupyterhub/alembic*,
    onbuild,
    scripts,
    share,
    tools,
    setup.py
